--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,5 +1,6 @@
 name: Node.js Package
 
+
 on:
   release:
     types: [created]
@@ -8,24 +9,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 10
+          node-version: 16
       - run: npm ci
       - run: npm test
 
-  publish-npm:
+  publish-gpr:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 10
-          registry-url: https://registry.npmjs.org/
+          node-version: 16
+          registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm run prepublish
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
