--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geltglobal/graphqlizejs",
-  "version": "0.4.1",
+  "version": "0.4.2g",
   "description": "Generate DataTypes and Resolvers from your ORM Sequilize models.",
   "main": "./src/index.js",
   "type": "module",
@@ -24,35 +24,19 @@
     "lodash.concat": "^4.5.0",
     "lodash.first": "^3.0.0",
     "lodash.upperfirst": "^4.3.1",
-    "sequelize": "^5.21.7"
+    "sequelize": "^6.6"
   },
   "devDependencies": {
-    "apollo-boost": "^0.1.13",
     "apollo-server": "^2.12.0",
-    "apollo-server-express": "^2.12.0",
     "apollo-server-testing": "^2.12.0",
-    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "faker": "^4.1.0",
-    "graphql": "^14.6.0",
+    "graphql": "^15.5",
     "graphql-tag": "^2.10.3",
     "graphql-type-json": "^0.3.2",
-    "hasha": "^3.0.0",
     "lodash.pick": "^4.4.0",
     "lodash.random": "^3.2.0",
     "lodash.times": "^4.3.2",
     "lodash.uniqby": "^4.7.0",
-    "mocha": "^6.2.3",
-    "mysql2": "^1.7.0",
-    "nodemon": "^1.19.4",
-    "pg": "^7.18.2",
-    "prettier": "^1.19.1",
-    "sequelize-cli": ">=5.0.0",
-    "sqlite": "^3.0.6",
-    "sqlite3": "^4.2.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "mocha": "^8.4"
   }
 }
