--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geltglobal/graphqlizejs",
-  "version": "0.4.2g",
+  "version": "0.4.3g",
   "description": "Generate DataTypes and Resolvers from your ORM Sequilize models.",
   "main": "./src/index.js",
   "type": "module",
@@ -20,14 +20,14 @@
     "test": "exit 0"
   },
   "dependencies": {
-    "graphql-iso-date": "^3.6.1",
+    "graphql-scalars": "^1.1.0",
     "lodash.concat": "^4.5.0",
     "lodash.first": "^3.0.0",
     "lodash.upperfirst": "^4.3.1",
     "sequelize": "^6.6"
   },
   "devDependencies": {
-    "apollo-server": "^2.12.0",
+    "apollo-server": "^3.1.0",
     "apollo-server-testing": "^2.12.0",
     "chai": "^4.2.0",
     "graphql": "^15.5",
