--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geltglobal/graphqlizejs",
-  "version": "0.4.3g",
+  "version": "0.4.4-g",
   "description": "Generate DataTypes and Resolvers from your ORM Sequilize models.",
   "main": "./src/index.js",
   "type": "module",
@@ -20,23 +20,23 @@
     "test": "exit 0"
   },
   "dependencies": {
+    "apollo-server": "^3.1.0",
+    "graphql": "^15.5",
     "graphql-scalars": "^1.1.0",
+    "graphql-type-json": "^0.3.2",
     "lodash.concat": "^4.5.0",
     "lodash.first": "^3.0.0",
-    "lodash.upperfirst": "^4.3.1",
-    "sequelize": "^6.6"
-  },
-  "devDependencies": {
-    "apollo-server": "^3.1.0",
-    "apollo-server-testing": "^2.12.0",
-    "chai": "^4.2.0",
-    "graphql": "^15.5",
-    "graphql-tag": "^2.10.3",
-    "graphql-type-json": "^0.3.2",
     "lodash.pick": "^4.4.0",
     "lodash.random": "^3.2.0",
     "lodash.times": "^4.3.2",
     "lodash.uniqby": "^4.7.0",
+    "lodash.upperfirst": "^4.3.1",
+    "sequelize": "^6.6"
+  },
+  "devDependencies": {
+    "apollo-server-testing": "^2.12.0",
+    "chai": "^4.2.0",
+    "graphql-tag": "^2.10.3",
     "mocha": "^8.4"
   }
 }
